[gd_scene load_steps=21 format=2]

[ext_resource path="res://PNG/Boss-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Base.gd" type="Script" id=2]
[ext_resource path="res://PNG/Ring.png" type="Texture" id=3]
[ext_resource path="res://Effects/Smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/Splatter.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.2371

[sub_resource type="CircleShape2D" id=2]
radius = 23.1255

[sub_resource type="Animation" id=3]
resource_name = "Fade"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Ring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ring:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.796078, 0, 1 ), Color( 1, 0.654902, 0, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ring:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0, 0.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.517073, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.898039, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 2.44
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.28
angular_velocity = 30.0
angular_velocity_random = 0.23
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
radial_accel = 2.0
damping = 20.0
scale = 3.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.536585, 0.804878, 1 )
colors = PoolColorArray( 1, 0.9375, 0, 1, 1, 0.513726, 0, 0.701961, 1, 1, 1, 0.173086, 0.603922, 0.0941176, 0.0431373, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.00877193, 0.078409 ), 0.0, 0.0, 0, 0, Vector2( 0.223684, 0.372727 ), 0.24385, 0.24385, 0, 0, Vector2( 1, 0.154545 ), 0.327272, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 2, 2, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 60.0
radial_accel_random = 1.0
damping = 60.0
angle = 720.0
angle_random = 0.99
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="CircleShape2D" id=14]
radius = 56.2754

[sub_resource type="CircleShape2D" id=15]
radius = 83.1589

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.320842, 0.00398827 )
shape = SubResource( 1 )

[node name="Enemy_Base" type="Area2D" parent="."]
position = Vector2( 2.00453, -7.57263 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Base"]
position = Vector2( -2.11893, 6.88651 )
shape = SubResource( 2 )

[node name="Ring_Fade" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )

[node name="Splatter" parent="." instance=ExtResource( 5 )]
rotation = 1.5708
scale = Vector2( 4.5, 4.5 )
process_material = SubResource( 8 )

[node name="Test" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.8, 0.8 )
process_material = SubResource( 13 )

[node name="Ring" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Detect" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( -3.00339, 7.0079 )
shape = SubResource( 14 )

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( -3.5636, 6.90446 )
shape = SubResource( 15 )

[node name="Spawn_Zone" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Spawn_Zone"]
position = Vector2( -30.7274, -9.54093 )

[node name="Position2D2" type="Position2D" parent="Spawn_Zone"]
position = Vector2( -37.0413, 16.2757 )

[node name="Position2D3" type="Position2D" parent="Spawn_Zone"]
position = Vector2( -1.96432, 36.0591 )

[node name="Position2D4" type="Position2D" parent="Spawn_Zone"]
position = Vector2( 30.7274, 23.1508 )

[node name="Position2D5" type="Position2D" parent="Spawn_Zone"]
position = Vector2( 29.6049, -5.33169 )
[connection signal="area_entered" from="Enemy_Base" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Detect" to="." method="_on_Detect_area_entered"]
[connection signal="area_exited" from="Exit" to="." method="_on_Exit_area_exited"]
